--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "testing purpose",
   "main": "app.js",
   "scripts": {
-   "install": "npm install",
-   "deploy": "node_modules/.bin/babel-node app.js",
-	"start": "npm run install && npm run deploy"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node_modules/.bin/babel-node app.js"
   },
   "author": "",
   "license": "ISC",
